Use non-deprecated style